# File-MCP-server

./: .gitignore  Dockerfile  README.md  README_DOCKER.md  RUN_WITH_INSPECTOR.md  docker_run.sh  fastmcp.json  file_utils.py  local_main_mcp.py  main.py  openapi.json  pyproject.toml  rest_api.py  run_inspector.sh  update_schema.py  verify_server.py
tests/: inspect_tool.py  test_all_components.py  test_cloud.py  verify_concurrency.py  verify_concurrency_main.py  verify_env_var.py  verify_read_paths.py  verify_refactored_main.py  verify_rest_api.py  verify_sandbox.py  verify_tmp_path.py
